package util;

/** Gemeinsame Typdefinitionen (Enums) */
public final class Types {
    private Types() {}

    /** Eindeutige IDs der Kochzonen */
    public enum ZoneID { FRONT_LEFT, FRONT_RIGHT, BACK_LEFT, BACK_RIGHT }
}
